--- a/index.html
+++ b/index.html
@@ -42,24 +42,26 @@
         <div class="container text-center">
             <div class="row">
                 <div class="col">
-                    <img src="https://via.placeholder.com/40x50" alt="">
-                    <img src="https://via.placeholder.com/30x30" alt="">
-                    <img src="https://via.placeholder.com/50x80" alt="">
+                    <img src="img/1.jpg" alt="">
+                    <img src="img/2.jpg" alt="">
+                    <img src="img/3.jpg" alt="">
                 </div>
                 <div class="col">
-                    <img src="https://via.placeholder.com/50x80" alt="">
-                    <img src="https://via.placeholder.com/30x30" alt="">
-                    <img src="https://via.placeholder.com/40x50" alt="">
+                    <img src="img/4.jpg" alt="">
+                    <img src="img/5.jpg" alt="">
+                    <img src="img/6.jpg" alt="">
                 </div>
                 <div class="col">
-                    <img src="https://via.placeholder.com/30x30" alt="">
-                    <img src="https://via.placeholder.com/50x80" alt="">
-                    <img src="https://via.placeholder.com/30x30" alt="">
+                    <img src="img/7.jpg" alt="">
+                    <img src="img/8.jpg" alt="">
+                    <img src="img/9.jpg" alt="">
+                    <img src="img/10.jpg" alt="">
+
                 </div>
                 <div class="col">
-                    <img src="https://via.placeholder.com/50x80" alt="">
-                    <img src="https://via.placeholder.com/30x30" alt="">
-                    <img src="https://via.placeholder.com/50x80" alt="">
+                    <img src="img/11.jpg" alt="">
+                    <img src="img/12.jpg" alt="">
+                    <img src="img/13.jpg" alt="">
                 </div>
             </div>
           </div>
