Agregue imagen search y de perfil. Modifique seccion navbar en css

--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
                 <a class="navbar-brand logo" href="#">CAP</a>
 
                 <form class="d-flex" role="search">
+                    <img class="logo-search" src="img/search.svg" alt="">
                     <input class="form-control me-2" type="search" placeholder="Search CAP" aria-label="Search">
                 </form>
 
                 <a class="navbar-brand img" href="#">
-                  <img src="https://via.placeholder.com/10x10" alt="" width="30" height="24">
+                  <img src="img/perfil.jpg" alt="" width="40" height="30">
                 </a>
             </div>
         </nav>
